@@ -1,5 +1,9 @@
 2007-06-21  George Giolfan  <georgegiolfan@yahoo.com>
 
+	* GridTest.cs: Added WhereIsGridLinesRendererCreated* tests.
+
+2007-06-21  George Giolfan  <georgegiolfan@yahoo.com>
+
 	* GridTest.cs: Expanded ShowGridLines test.
 
 2007-06-21  George Giolfan  <georgegiolfan@yahoo.com>
